--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -209,14 +209,16 @@
 {% block left %}
 <div class="content-box tabbable">
     <ul class="nav nav-tabs">
-        <li class="active"><a href="#readme" data-toggle="tab" data-target="readme"><i class="icon-info"></i>README</a></li>
+        <li class="active"><a href="#readme" data-toggle="tab" data-target="#readme"><i class="icon-info"></i>README</a></li>
         {%- if bundle.license -%}
-        <li><a href="#license" data-toggle="tab" data-target="license"><i class="icon-bag"></i>LICENSE</a></li>
+        <li><a href="#license" data-toggle="tab" data-target="#license"><i class="icon-bag"></i>LICENSE</a></li>
         {%- endif %}
         {%- if not bundle.canonicalConfig is empty -%}
-        <li><a href="#configuration" data-toggle="tab" data-target="configuration"><i class="icon-wrench"></i>Configuration</a></li>
+        <li><a href="#configuration" data-toggle="tab" data-target="#configuration"><i class="icon-wrench"></i>Configuration</a></li>
         {%- endif %}
-        <li><a href="#activity" data-toggle="tab" data-target="activity"><i class="icon-clock"></i>Recent activity</a></li>
+        {%- if bundle.lastCommits|length > 0 -%}
+        <li><a href="#activity" data-toggle="tab" data-target="#activity"><i class="icon-clock"></i>Recent activity</a></li>
+        {%- endif %}
     </ul>
 
     <div class="tab-content">
@@ -242,6 +244,7 @@
         </div>
         {%- endif -%}
 
+        {%- if bundle.lastCommits|length > 0 -%}
         <div id="activity" class="tab-pane">
             <ul>
                 {%- for commit in bundle.lastCommits %}
@@ -260,6 +263,7 @@
                 {%- endfor %}
             </ul>
         </div>
+        {%- endif -%}
     </div>
 </div>
 
