--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="{{ asset_url }}?v1" type="text/css" media="screen">
     {% endstylesheets %}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </head>
 <body{% block body_attributes %}{% endblock %}>
 
@@ -128,6 +128,7 @@
 
 {% javascripts filter='?yui_js'
     'bundles/knpbundles/js/jquery.hotkeys.js'
+    'bundles/knpbundles/js/jquery-ui.min.js'
     'bundles/knpbundles/js/bootstrap.min.js'
     'bundles/knpbundles/js/main.js'
     'bundles/knpbundles/js/highlightjs-js/highlight.js'
