--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
@@ -1071,6 +1071,7 @@ code, pre {
 }
 
 .developers-list article {
+    position: relative;
     float: left;
     width: 235px;
     height: 71px;
@@ -1099,14 +1100,28 @@ code, pre {
     float: left;
     width: 50px;
     height: 50px;
-    margin: 0 20px 15px 0;
+    margin: 0 18px 15px 0;
     border: 3px solid #e1e1e1
 }
 
+.developers-list article .generals {
+    background: #fff
+}
+
+.developers-list article.even .generals {
+    background: #f8fcfe
+}
+
 .developers-list article h3 {
+    overflow: hidden;
+    width: 160px;
+    left: 100px;
+    top: 10px;
     margin: 0;
+    padding: 5px 0;
     line-height: 16px;
-    font-size: 16px
+    font-size: 16px;
+    background: inherit
 }
 
 .developers-list article p {
