Various english tweaks around the site

--- a/app/Resources/HWIOAuthBundle/views/Connect/login.html.twig
+++ b/app/Resources/HWIOAuthBundle/views/Connect/login.html.twig
@@ -5,7 +5,7 @@
 {% block intro %}
 <div id="intro">
     <h1>Sign in to KnpBundles.com</h1>
-    <h2>Action you want to perform, require from you to sign-in</h2>
+    <h2>We need you to sign in before doing this</h2>
 </div>
 {% endblock %}
 
@@ -13,7 +13,7 @@
 <div class="content-box">
     <hgroup>
         <h2>No "Sign up" form?</h2>
-        <h4>Yep, there is no sign-up form, but why you ask? We don't like them it same as you! All sign-up job is done automatically in background when you choose which way you want to sign in into <strong>KnpBundles.com</strong></h4>
+        <h4>Yep, there is no sign-up form! But why you ask? We don't like them anymore than you do! All the "sign-up" work is done automatically in the background when you choose one of the ways below to authenticate with <strong>KnpBundles.com</strong></h4>
     </hgroup>
 
     <section>
