--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.html.twig
@@ -7,7 +7,7 @@
 {% block intro %}
 <div id="intro">
     <h1>Over {{ bundles.nbResults }} bundles</h1>
-    <h2>Find bundle that fits your needs!</h2>
+    <h2>Find a bundle that fits your needs!</h2>
 </div>
 {% endblock %}
 
