--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/aboutScoring.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/aboutScoring.html.twig
@@ -7,7 +7,7 @@
 {% block intro %}
 <div id="intro">
     <h1>KnpBundles scoring</h1>
-    <h2>Detailed explanation of used scoring algorithm</h2>
+    <h2>Detailed explanation of the scoring algorithm</h2>
 </div>
 {% endblock %}
 
