--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -11,9 +11,13 @@
 
     <link rel="alternate" href="{{ path('latest', {'format': 'atom'}) }}" title="ATOM" type="application/atom+xml">
 
-    <link rel="stylesheet" href="{{ asset('bundles/knpbundles/css/bootstrap.min.css') }}" type="text/css" media="screen">
-    <link rel="stylesheet" href="{{ asset('bundles/knpbundles/css/styles.css') }}" type="text/css" media="screen">
-    <link rel="stylesheet" href="http://yandex.st/highlightjs/6.0/styles/github.min.css" type="text/css" media="screen">
+    {% stylesheets filter="cssrewrite, ?yui_css"
+        'bundles/knpbundles/css/bootstrap.min.css'
+        'bundles/knpbundles/css/styles.css'
+        'bundles/knpbundles/css/highlightjs-css/github.css'
+    %}
+    <link rel="stylesheet" href="{{ asset_url }}?v1" type="text/css" media="screen">
+    {% endstylesheets %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 </head>
@@ -121,10 +125,15 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
 </script>
-<script src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
-<script src="{{ asset('bundles/knpbundles/js/jquery.hotkeys.js') }}"></script>
-<script src="{{ asset('bundles/knpbundles/js/bootstrap.min.js') }}"></script>
-<script src="{{ asset('bundles/knpbundles/js/main.js') }}"></script>
+
+{% javascripts filter='?yui_js'
+    'bundles/knpbundles/js/jquery.hotkeys.js'
+    'bundles/knpbundles/js/bootstrap.min.js'
+    'bundles/knpbundles/js/main.js'
+    'bundles/knpbundles/js/highlightjs-js/highlight.js'
+%}
+<script src="{{ asset_url }}?v1"></script>
+{% endjavascripts %}
 <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
