refactor faq with more info
Add missing bundles icon reference
add controller action for faq on scoring
add text for faq and include link from about scoring to faq scoring pages
updated according to jozef's comments
add proposal for centralized scoring details
address comments
add note for the future removal of route scoring kept for SEO purposes only
fix faq-score page static page feature
add usage for frameworkbundle redirect for about/scoring route

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/faqScoring.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/faqScoring.html.twig
@@ -1,13 +1,13 @@
 {% extends "KnpBundlesBundle::layout/900px.html.twig" %}
 
-{% block title %}{% trans %}about_scoring.meta.title{% endtrans %}{% endblock %}
+{% block title %}{% trans %}faq_scoring.meta.title{% endtrans %}{% endblock %}
 
-{% block description %}{% trans %}about_scoring.description{% endtrans %}{% endblock %}
+{% block description %}{% trans %}faq_scoring.description{% endtrans %}{% endblock %}
 
 {% block intro %}
 <div id="intro">
-    <h1>KnpBundles scoring</h1>
-    <h2>Detailed explanation of the scoring algorithm</h2>
+    <h1>KnpBundles FAQ Scoring</h1>
+    <h2>Frequent answers to questions regarding bundle scoring issues</h2>
 </div>
 {% endblock %}
 
