--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -91,7 +91,7 @@
                     <ul>
                         <li><a href="https://github.com/knplabs/knpbundles">{% trans %}footer.code{% endtrans %}</a></li>
                         <li><a href="{{ path('api') }}">API</a></li>
-                        <li><a href="{{ path('scoring') }}">{% trans %}Scoring explanation{% endtrans %}</a></li>
+                        <li><a href="{{ path('faq_scoring') }}">{% trans %}Scoring FAQ{% endtrans %}</a></li>
                         <li><a href="{{ path('symfony2bundles') }}">Symfony2bundles</a></li>
                         <li><a href="https://github.com/KnpLabs/KnpBundles/issues/new">{% trans %}footer.report_issue{% endtrans %}</a></li>
                     </ul>
